--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="calculator">
-            <input type="text" class="calculator-screen" value="0" disabled>
+            <input id = "calcu" type="text" class="calculator-screen" value="0"  disabled/>
             <div class="calculator-keys">
 
                 <div class="row">
@@ -45,6 +45,6 @@
 
             </div>
         </div>
-
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
